# ACD2023WinIR

./: Build-Header.ps1  Build-Headers.ps1  CMakeLists.txt  README.md
decode/: CMakeLists.txt  decode.cpp  decode.hpp
dropper/: CMakeLists.txt  dropper.cpp  dropper.hpp  embed.hpp
elevate/: CMakeLists.txt  elevate.cpp  elevate.hpp
include/: CMakeLists.txt  base64.cpp  base64.hpp  header.hpp  logger.cpp  logger.hpp  util.cpp  util.hpp
lab/: CMakeLists.txt  lab.cpp
listener/: CMakeLists.txt  embed.hpp  listener.cpp  listener.hpp  nc64Embed.hpp
loader/: CMakeLists.txt  embed.hpp  loader.cpp  loader.hpp
persistence/: CMakeLists.txt  embed.hpp  persistence.cpp  persistence.hpp
prep/: CMakeLists.txt  prep.cpp  prep.hpp
privesc/: CMakeLists.txt  embed.hpp  privesc.cpp  privesc.hpp
